Fix loader alignment

--- a/client/src/components/layout/Loader/index.scss
+++ b/client/src/components/layout/Loader/index.scss
@@ -11,7 +11,6 @@
   margin-left: auto;
   margin-right: auto;
   position: relative;
-  left: -48.5px;
   margin-top: 50px;
   margin-bottom: 70px;
 }
